--- a/index.htm
+++ b/index.htm
@@ -451,6 +451,18 @@
                     </div>
                     <div class="content">
                       <span>Phase 1</span>
+                      <p>CoinGecko and CoinMarketCap Listings </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="step ">
+                  <div class="wrap">
+                    <div class="pointer">
+                      <div class="bubble"></div>
+                      <div class="line"></div>
+                    </div>
+                    <div class="content">
+                      <span>Phase 1</span>
                       <p>Public Launch. Staking in Community Node Pool and Full Node Creation immediately available. </p>
                     </div>
                   </div>
