--- a/index.htm
+++ b/index.htm
@@ -1668,6 +1668,15 @@
                         ><span>Docs</span></a
                       >
                     </li>
+                    <li>
+                      <a
+                        href="https://vote.lava.financial/#/"
+                        target="_blank"
+                        rel="noreferrer"
+                        ><span>
+                          Governance</span></a
+                      >
+                    </li>
                   </ul>
                 </nav>
                 <nav class="socials">
