--- a/index.htm
+++ b/index.htm
@@ -1673,8 +1673,7 @@
                         href="https://vote.lava.financial/#/"
                         target="_blank"
                         rel="noreferrer"
-                        ><span>
-                          Governance</span></a
+                        ><span>Governance</span></a
                       >
                     </li>
                   </ul>
